force-app/main/default/objects/Question__c/fields/Count_of_Option_Records__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Option_Records__c</fullName>
    <label>Count of Option Records</label>
    <summaryForeignKey>Option__c.Question__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>