force-app/main/default/objects/Question__c/fields/IsHasOptions__c.field-meta.xml
<CustomField>
    <fullName>IsHasOptions__c</fullName>
    <formula>if(Count_of_Option_Records__c &gt; 0, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsHasOptions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>