force-app/main/default/objects/Question__c/fields/Question_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Question_Explanation__c</fullName>
    <label>Question Explanation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>